# repo-manager

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  flake.nix
api/repo_manager/v1/: rpc.proto
crates/repo-help-derive/: Cargo.toml
crates/repo-help-derive/src/: lib.rs
crates/repo-manager/: Cargo.toml
crates/repo-manager-core/: Cargo.toml  build.rs
crates/repo-manager-core/src/: lib.rs
crates/repo-manager/src/: main.rs
crates/repod/: Cargo.toml
crates/repod/src/: main.rs
dev/: flake.nix
nix/flake/: dev-partition.nix
nix/overlays/: default.nix
src/: lib.rs  main.rs
