[package]
name = "repo-manager"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Opinionated repository placement and move manager"

[workspace]
members = [".", "crates/repo-help-derive"]

[[bin]]
name = "repo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
anstyle = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
env_logger = "0.11"
getrandom = "0.4"
log = "0.4"
repo-help-derive = { path = "crates/repo-help-derive" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
url = "2"
which = "8"

[dev-dependencies]
tempfile = "3"
